unpackaged/main/default/objects/Account/fields/Andrew_Test__c.field-meta.xml
<CustomField>
    <fullName>Andrew_Test__c</fullName>
    <formula>SLAExpirationDate__c - 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Andrew Test</label>
    <type>Date</type>
</CustomField>