unpackaged/main/default/objects/Account/fields/Customer_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount_Percentage__c</fullName>
    <formula>Customer_Discount_Tier__c / 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>