unpackaged/main/default/objects/Account/fields/Customer_Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount_Tier__c</fullName>
    <label>Customer Discount Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>