unpackaged/main/default/objects/Account/fields/Merge_Test_2__c.field-meta.xml
<CustomField>
    <fullName>Merge_Test_2__c</fullName>
    <description>Merge test 2 field for merge test 2</description>
    <inlineHelpText>a field for merge test #2 for #2</inlineHelpText>
    <label>Merge Test 2</label>
    <length>225</length>
    <type>Text</type>
</CustomField>