unpackaged/main/default/objects/Account/fields/Merge_Test_3__c.field-meta.xml
<CustomField>
    <fullName>Merge_Test_3__c</fullName>
    <description>Merge Test #3 for merge test 3</description>
    <inlineHelpText>Merge Test #3 for merge test 3</inlineHelpText>
    <label>Merge Test 3</label>
    <length>225</length>
    <type>Text</type>
</CustomField>