unpackaged/main/default/objects/Account/fields/Merge_Test_4__c.field-meta.xml
<CustomField>
    <fullName>Merge_Test_4__c</fullName>
    <description>Merge test #4 for the 4th merge test</description>
    <inlineHelpText>a field for merge test #4, #4</inlineHelpText>
    <label>Merge Test 4</label>
    <length>225</length>
    <type>Text</type>
</CustomField>