unpackaged/main/default/objects/Account/fields/Merge_Test__c.field-meta.xml
<CustomField>
    <fullName>Merge_Test__c</fullName>
    <description>A field testing a merge conflict for a POC</description>
    <inlineHelpText>This field is used as a test</inlineHelpText>
    <label>Merge Test</label>
    <length>250</length>
    <type>Text</type>
</CustomField>