unpackaged/main/default/objects/Account/fields/Over_200_employees__c.field-meta.xml
<CustomField>
    <fullName>Over_200_employees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Over 250 employees????????</description>
    <inlineHelpText>Does this account have more than 250 employees?</inlineHelpText>
    <label>Over 200 employees?!</label>
    <type>Checkbox</type>
</CustomField>