unpackaged/main/default/objects/Account/fields/Upsold__c.field-meta.xml
<CustomField>
    <fullName>Upsold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this account upsold?</description>
    <label>Upsold?</label>
    <type>Checkbox</type>
</CustomField>